# aoc-2019

./: pyproject.toml
day-1/: day1.py  test_day1.py
day-2/: day2.py  test_day2.py
day-3/: day3.py  test_day3.py
day-4/: day4.py
day-5/: day5.py
day-6/: day-6.py
day-7/: day7.py
day-8/: day8.py
