[tool.poetry]
name = "aoc-2019"
version = "0.1.0"
description = "Advent of Code 2019"
authors = ["nicola-zen <mildlyinteresting@posteo.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.3"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
